--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "llmview",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "bin": {
     "llmview": "dist/cli.js"
   },
@@ -22,10 +22,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
-  "files": [
-    "dist",
-    "README.md"
-  ],
+  "files": ["dist", "README.md"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/noahtren/llmview.git"
