--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "llmview",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Reusable views of code for LLM context",
   "keywords": [],
   "author": "",
@@ -24,7 +24,8 @@
     "build": "tsx build.ts",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "readme-example": "tsx scripts/readme-example.ts"
   },
   "dependencies": {
     "ignore": "^7.0.5",
